--- a/public/cursos/examen-de-idioma-inglés/index.html
+++ b/public/cursos/examen-de-idioma-inglés/index.html
@@ -13,10 +13,10 @@
 
 	<meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="-"/>
+<meta name="twitter:description" content="- "/>
 
 	<meta property="og:title" content="" />
-<meta property="og:description" content="-" />
+<meta property="og:description" content="- " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="http://www.dinfo.ing.unp.edu.ar/sitios/dci/cursos/examen-de-idioma-ingl%C3%A9s/" />
 
@@ -146,7 +146,10 @@
 
     
     <main class="post__body">
-        <p>-</p>
+        <p>-
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbMTYyNzYxMDM0OV19
+--></p>
 
     </main>
     
